--- a/codingwithyongs_client/package.json
+++ b/codingwithyongs_client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.14.2",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
