--- a/codingwithyongs_client/package.json
+++ b/codingwithyongs_client/package.json
@@ -13,7 +13,11 @@
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
+    "lucide-react": "^0.343.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -22,7 +26,10 @@
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
