--- a/codingwithyongs_client/package.json
+++ b/codingwithyongs_client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
@@ -26,6 +27,7 @@
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.1",
