--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,8 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+python-slugify==8.0.4
 SQLAlchemy==2.0.28
+text-unidecode==1.3
 typing_extensions==4.10.0
 Werkzeug==3.0.1
