--- a/codingwithyongs_client/package.json
+++ b/codingwithyongs_client/package.json
@@ -24,6 +24,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-linkedin-login-oauth2": "^2.0.1",
