--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-DATABASE="codingwithyonela"
-DATABASE_USER="yongs"
-HOST='localhost'
-PASSWORD="Juanesse"
-PORT=5432
+DATABASE="postgres"
+DATABASE_USER="postgres"
+HOST='34.35.51.198'
+PASSWORD="Juanesse123"
+PORT="5432"
 TOKEN=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
+CLOUDINARY_URL=cloudinary://923153681439979:WoNElVLAA43srVrhGj5-FTqw0lU@globalnomi
