--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.343.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -29,10 +30,11 @@
     "react-icons": "^5.0.1",
     "react-linkedin-login-oauth2": "^2.0.1",
     "react-loader-spinner": "^6.1.6",
-    "react-markdown": "^8.0.6",
+    "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "redux-persist": "^6.0.0",
     "rehype": "^13.0.1",
