--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,48 +1,70 @@
 annotated-types==0.7.0
 anyio==4.4.0
+asttokens==2.4.1
 bcrypt==4.0.1
 blinker==1.8.2
 certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.1.7
+cloudinary==1.40.0
 colorama==0.4.6
+cryptography==42.0.8
 dnspython==2.6.1
+ecdsa==0.19.0
 email_validator==2.2.0
+executing==2.0.1
+Faker==26.0.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
 Flask==3.0.3
 Flask-Cors==4.0.1
+Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+icecream==2.1.3
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jwt==1.3.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.6
 passlib==1.7.4
 psycopg2==2.9.9
+pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 pygame==2.5.2
 pygame-ce==2.4.1
 Pygments==2.18.0
+PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
+python-slugify==8.0.4
 PyYAML==6.0.1
+requests==2.32.3
 rich==13.7.1
+rsa==4.9
 shellingham==1.5.4
+six==1.16.0
 slugify==0.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
+text-unidecode==1.3
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.1
 watchfiles==0.22.0
 websockets==12.0
