--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-DATABASE="postgres"
-DATABASE_USER="postgres"
-PASSWORD="Juanesse123"
-HOST='localhost'
+DATABASE="yongs"
+DATABASE_USER="yongs_user"
+PASSWORD="ANW1LMoLfWbkCFDx1w0tq20WZqxNtzbJ"
+HOST='dpg-cqr1ct88fa8c73fmgomg-a.oregon-postgres.render.com'
 PORT="5432"
 MAIL_PASSWORD="faujyegubxkbvhzc"
 TOKEN="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"
