--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -41,6 +41,7 @@ passlib==1.7.4
 psycopg==3.2.1
 psycopg-binary==3.2.1
 psycopg-pool==3.2.2
+psycopg2==2.9.9
 pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.8.2
