--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,7 +7,7 @@
     ],
     "routes": [
         {
-            "src": "/routes(.*)",
+            "src": "./routes(.*)",
             "dest": "app.py"
         }
     ]
