--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.3.18",
+    "helmet": "^7.1.0",
     "lucide-react": "^0.343.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
