--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-email-editor": "^1.7.11",
     "react-helmet": "^6.1.0",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
